--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <spring-webmvc.version>5.2.0.RELEASE</spring-webmvc.version>
-    <spring-orm.version>5.0.8.RELEASE</spring-orm.version>
+    <spring-orm.version>5.3.1</spring-orm.version>
     <hibernate-entitymanager.version>5.4.21.Final</hibernate-entitymanager.version>
     <hibernate-core.version>5.4.24.Final</hibernate-core.version>
     <thymeleaf-spring5.version>3.0.9.RELEASE</thymeleaf-spring5.version>
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
-      <version>${spring-orm.version}</version>
+      <version> 5.3.1</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -49,6 +49,18 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>${hibernate-core.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.2.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>5.2.0.RELEASE</version>
     </dependency>
 
     <dependency>
